--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="images">
+    <file>images/project_backdown_logo_centered.jpg</file>
     <file>images/project_backdown_startup_fade_in.gif</file>
     <file>images/project_backdown_ascii_art.jpg</file>
   </qresource>
