--- a/resources.qrc
+++ b/resources.qrc
@@ -7,4 +7,7 @@
     <file>images/Green_BG.png</file>
     <file>images/Red_BG.png</file>
   </qresource>
+  <qresource prefix="sounds">
+    <file>sounds/startup_noise2.wav</file>
+  </qresource>
 </RCC>
